--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -5,3 +5,27 @@ spring:
     config:
       fail-fast: true
       uri: http://config:8888
+  datasource:
+    url: jdbc:mysql://localhost:3306/booksservice?useUnicode=true&characterEncoding=utf8&useSSL=false
+    name:
+    username: root
+    password: admin
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database: MYSQL
+    properties:
+      hibernate.cache.use_second_level_cache: true
+      hibernate.cache.use_query_cache: false
+      hibernate.generate_statistics: false
+      hibernate.cache.region.factory_class: com.hazelcast.hibernate.HazelcastCacheRegionFactory
+      hibernate.cache.hazelcast.instance_name: booksservice
+      hibernate.cache.use_minimal_puts: true
+      hibernate.cache.hazelcast.use_lite_member: true
+    hibernate:
+      ddl-auto: create
+cache: # Hibernate 2nd level cache, used by CacheConfiguration
+    hazelcast:
+        timeToLiveInSeconds: 3600
+logging:
+  level:
+    com.hazelcast: debug
