--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<hikaricp.version>2.5.1</hikaricp.version>
+		<hazelcast.version>3.7</hazelcast.version>
+		<commonsvalidator.version>1.5.1</commonsvalidator.version>
+		<lombok.version>1.16.10</lombok.version>
 	</properties>
 
 	<dependencies>
@@ -64,17 +68,17 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.10</version>
+			<version>${lombok.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-validator</groupId>
 			<artifactId>commons-validator</artifactId>
-			<version>1.5.1</version>
+			<version>${commonsvalidator.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast-all</artifactId>
-			<version>3.7</version>
+			<version>${hazelcast.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -83,7 +87,7 @@
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
-			<version>2.5.1</version>
+			<version>${hikaricp.version}</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>tools</artifactId>
