--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
 		<hazelcast.version>3.7</hazelcast.version>
 		<commonsvalidator.version>1.5.1</commonsvalidator.version>
 		<lombok.version>1.16.10</lombok.version>
+		<assertj.version>3.6.1</assertj.version>
+		<catch-exception.version>1.2.0</catch-exception.version>
+		<mockito.version>1.9.5</mockito.version>
 	</properties>
 
 	<dependencies>
@@ -103,6 +106,24 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.catch-exception</groupId>
+			<artifactId>catch-exception</artifactId>
+			<version>${catch-exception.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
